src/css/style.scss
/* ... */
#life-button-container {
  align-items: end;
  display: flex;
  flex-direction: row;
  justify-content: end;
}
#life-button-container button {
  align-items: center;
  background-color: $desert-sky-lighter;
  border: none;
  border-radius: 3px;
  display: grid;
  grid-template-rows: 100%;
  height: 1.5rem;
  margin-left: 5px;
  padding: 2px;
  width: 1.5rem;
  z-index: 1;
}
.night #life-button-container button {
  background-color: $desert-sky-darker;
}
#life-button-container button:hover {
  background-color: $solarized-blue-faded;
}
.night #life-button-container button {
  color: $solarized-base2;
}
@media (max-width: $small-screen-break) {
  #life-button-container {
    display: none;
  }
}
.play-button-container,
.pause-button-container,
.reset-button-container {
  display: grid;
  grid-row-start: 1;
  grid-column-start: 1;
  grid-template-columns: 100%;
  grid-template-rows: 100%;
  height: 100%;
  position: relative;
  width: 100%;
  > div {
    display: grid;
    grid-column-start: 1;
    grid-row-start: 1;
    transition: opacity $transition-time;
    > img {
      height: 100%;
      width: 100%;
    }
  }
}
.day .life-icon-night {
  opacity: 0;
}

.night .life-icon {
  opacity: 0;
}

.life-play-button {
  &.play {
    .pause-button-container {
      opacity: 0;
    }
  }
  &.pause {
    .play-button-container {
      opacity: 0;
    }
  }
}

/**********/
/* Footer */
/**********/

#footer-area {
  display: grid;
  grid-area: footer;
  grid-template-columns: auto 800px auto;
  grid-template-rows: auto;
  height: 100px;
  width: 100%;
}
@media (max-width: 800px) {
  #footer-area {
    grid-template-columns: 0 100% 0;
  }
}
#day-night-toggle-container {
  display: flex;
  justify-content: center;
  width: 100%;
}

#day-night-toggle {
  align-items: center;
  background-color: inherit;
  border: 1px solid $solarized-blue-faded;
  border-radius: 7px;
  display: flex;
  padding: 2px;
  > div {
    background-size: 100% 100%;
    display: flex;
    width: 2rem;
    height: 2rem;
    opacity: 1;
    transition: background-color 0.5s;
  }
}
#day-toggle {
  background: url("../img/controls/sun.svg");
  background-color: $desert-sun-yellow;
  border-radius: 7px;
}
.night {
  #day-toggle {
    background-color: $desert-sun-yellow-faded;
    &:hover {
      background-color: $desert-sun-yellow-half;
    }
  }
}
#night-toggle {
  background: url("../img/controls/moon.svg");
  background-color: $solarized-base0;
  border-radius: 7px;
}
.day #night-toggle {
  background-color: $solarized-base0-trans;
  &:hover {
    background-color: $solarized-base0-half;
  }
}
#footer-area {
  #day-ground {
    background: url("../img/desert-ground-day.png");
    background-size: 100% 100%;
    grid-column-start: 2;
    grid-row-start: 1;
    transition: opacity $transition-time;
  }
  #night-ground {
    background: url("../img/desert-ground-night.png");
    background-size: 100% 100%;
    grid-column-start: 2;
    grid-row-start: 1;
    transition: opacity $transition-time;
  }
}
@media (max-width: 800px) {
  #footer-area {
    #day-ground {
      background-size: 800px;
    }
    #night-ground {
      background-size: 800px;
    }
  }
}
.footer-left {
  display: grid;
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 1;
  grid-row-end: 2;
  grid-template-rows: 43% 5% 21% 19% 12%;
  transition: opacity $transition-time;
}
.footer-right {
  display: grid;
  grid-column-start: 3;
  grid-column-end: 4;
  grid-row-start: 1;
  grid-row-end: 2;
  grid-template-rows: 51% 0 19% 11% 19%;
  transition: opacity $transition-time;
}
.footer-side-day {
  .desert-sky {
    background-color: $desert-sky-light;
  }
  .desert-ground-lighter {
    background-color: $desert-day-lighter;
  }
  .desert-ground-light {
    background-color: $desert-day-light;
  }
  .desert-ground-dark {
    background-color: $desert-day-dark;
  }
  .desert-ground-darker {
    background-color: $desert-day-darker;
  }
}
.footer-side-night {
  .desert-sky {
    background-color: $desert-sky-dark;
  }
  .desert-ground-lighter {
    background-color: $desert-night-lighter;
  }
  .desert-ground-light {
    background-color: $desert-night-light;
  }
  .desert-ground-dark {
    background-color: $desert-night-dark;
  }
  .desert-ground-darker {
    background-color: $desert-night-darker;
  }
}

/********/
/* Menu */
/********/

#menu-area {
  font-family: "Montserrat", sans-serif;
  grid-area: nav;
  margin: 0;
  padding-left: 0;
  ul {
    padding: 0;
    li {
      border: 1px solid $solarized-blue-faded;
      list-style: none;
      margin: 0.5rem 0;
      transition: background-color 100ms ease-in;
      &:hover {
        background-color: $solarized-blue-faded;
      }
      &.selected {
        background-color: $solarized-blue-faded;
        color: black;
      }
      button {
        background-color: inherit;
        border: none;
        font-family: inherit;
        font-size: 1.3rem;
        left: 5px;
        padding: 0.5rem 0;
        position: relative;
        top: 5px;
        transition: color $transition-time;
        width: 100%;
      }
    }
  }
}
.night #menu-area ul li button {
  color: $solarized-base2;
}

@media (max-width: $small-screen-break) {
  #menu-area ul {
    display: grid;
    grid-template-columns: repeat(3, 32%);
    column-gap: 2%;
    li {
      display: grid;
      button {
        color: inherit;
        font-size: 0.9rem;
      }
    }
  }
}

/************/
/* Sections */
/************/

#sections-area {
  grid-area: content;
  overflow: auto;
}

/*********/
/* About */
/*********/
#about-section {
  font-size: 1.1rem;
  p:first-of-type {
    margin-top: 0.5rem;
  }
}
#self-portrait {
  border: 1px solid $solarized-base1;
  border-radius: 5px;
  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
  float: right;
  margin-left: 1rem;
  margin-right: 5px;
  margin-bottom: 10px;
  width: 300px;
}
/* ... */

